# unvercity

./: .gitignore
AiPOS/laba4/: AiPOS_laba4_var_1_ch_2.pkt  AiPOS_laba4_var_1_v_2.pkt  ААААААААААААААА.docx
AiPOS/laba5/: AiPOS_laba5_ch1.pkt  laba5_za_2_v2_end.pkt
AiPOS/laba6/: laba6_z1.pkt  laba6_z2.pkt
AiPOS/laba7/: 7_1.pkt  laba7_z2.pkt  z1lab7.pkt
AiPOS_2/: CMakeLists.txt  main.cpp
AiPOS_2/lab1/: server.cpp
AiPOS_3/lab1/client/: client.sln
AiPOS_3/lab2/client/: client.sln
AiPOS_3/lab2/server/: server.sln
EYAI/lab1/: lab1.py  test.txt
EYAI/lab2/: lab2.py  test.txt
EYAI/lab3/: lab3.py  test.html
EYAI/lab4/: lab4.py
EYAI/lab5/: lab5.py  test.txt
EYAI/lab6/: lab6.py
EYAI2/lab1/: app.py  metrics.py  preprocess.py  search.py
EYAI2/lab1/documents/: doc1.txt  doc2.txt  doc3.txt
EYAI2/lab1/templates/: document.html  (+2 more)
EYAI2/lab2/: app1.py  app2.py  lab2.py  test.txt  text.docx  train.txt
EYAI2/lab3/: app.py  information.txt
EYAI2/lab4-6/: Sound 5.sfas  АОУЫИЭ.sfas  Саша кушал кашу.sfas  Саша.sfas  ФЦШХ.sfas  бдмн.sfas  кашу саша кушал.sfas  кашу.sfas  кушал.sfas  студент писал реферат - fade-graphic уничтожил 1 слово.sfk  студент писал реферат - pitch натыкал страстей.sfk  студент писал реферат - shift aka школьник.sfk  студент писал реферат - time scartch бистро.sfk  студент писал реферат - time scratch медленно.sfk  студент писал реферат.sfas  фасашаха.sfas
EYAI2/lab7-8/: listen.py  speaker.py
GIIS/lab2/: 123.vcf  321.vcf  CMakeLists.txt  example.vcf  imgui.ini  main.cpp
GIIS/test_imgui_dx9/: CMakeLists.txt  main.cpp
GIIS/test_imgui_dx9/TImage/: TImage.h
GIIS_2/test_opencv/: test_opencv.sln
IAD/lab1/: lab1.py
IAD/lab2/: lab2.py
IAD/lab3/: lab3.py
IAD/lab4/: lab4.py
KMZI/lab1/: test_client.py  test_server.py
KMZI/lab2/: hash_output.txt  iterations.txt  lab2kmzi.py
KMZI/lab4/: lab4kmzi.py  text.txt
KMZI/lab5/: client.py  counter.py  do_main.py  register.py
KMZI/lab6/: ec_csr.pem  ec_keypair.pem  ec_root_cert.pem  ec_root_cert.srl  intermediate_ec_cert.pem  intermediate_ec_csr.pem  intermediate_ec_keypair.pem  lab6.txt  openssl.cnf  openssl_intermediate.cnf
MrZIS/lab1/: lab1mrzis.py
MrZIS/lab2/: lab2mrzis_end.py
MrZIS/lab3/: lab3mrzis.py
MrZIS/lab4/: mrzislab4.py
MrZIS/lab5/: mrzislab5_1.py  mrzislab5_2.py
OMIS/lab4-6/: lab4-6.sln
PBZ/: 567lab_bd.sql  567lab_bd_1.sql  CMakeLists.txt  main.cpp
PBZ/5lab/: 5labpbz.py
PBZ/6lab/: 6labpbz.py
PBZ/7lab/: 7labpbz.py
RibaIMyasoHTMLLOVE/: find.html  index.html  pay.html  styles.css  styles_find.css  styles_pay.css
RibaIMyasoHTMLLOVE/Nastya/: albom.html  authorize.html  index.html  playlist-example.html  styles.css
SMZKS/lab1/: CMakePresets.json  compile_commands.json
SMZKS/lab2/: CMakeLists.txt
SMZKS/lab3/: CMakeLists.txt  CMakePresets.json
SMZKS/lab3/include/: RSA-hack.hpp  app.hpp
SMZKS/lab3/src/: RSA-hack.cpp
SMZKS/lab4/: lab4SMZKS.ipynb
SMZKS/lab5/: lab5SMZKS.ipynb
SSP/lab1/: CMakeLists.txt  main1_lab.cpp
SSP/lab2/: CMakeLists.txt  main.cpp
SSP/lab2/HospitalSQLite/: HospitalSQLite.h
SSP/lab3/: CMakeLists.txt  bicycle-rider.cpp  quest1.py  quest2.py  quest3.py
SSP/lab3/LoadTextures/: LoadTextures.h
SSP/lab4/: 1.py  2.py  3.py  5.py
YaPIS/lab1/: CMakeLists.txt  CMakePresets.json  compile_commands.json  test1.txt
YaPIS/lab2/: CMakeLists.txt  compile_commands.json  input.asm  main.cpp
YaPIS/lab3/: CMakeLists.txt  CMakePresets.json  compile_commands.json  input.asm
YaPIS/lab4/: CMakeLists.txt  compile_commands.json  diagram.drawio  gen_diagram.py  input.asm  lab4.drawio  lab4.drawio.html
YaPIS/lab5/: commands.txt  input.asm
YaPIS/lab6/: CMakeLists.txt  compile_commands.json  graph.drawio
include/: combinatoric.hh
kmzi_labs_2/: CMakeLists.txt  ReadMe.txt  main.cpp
kmzi_labs_2/lab1/: kmzi_lab1.cpp
next_sem_mrzis/lab1/: lab.py  test.py
next_sem_mrzis/lab2/: lab.py
(+318 files in other folders)
